--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
 
 <body>
   <header class="Header">
-    <h1>#ProgramadorFitness</h1>
+    <h1>Running</h1>
     <img src="./img/ProgramadorFitness.png" alt="#ProgramadorFitness">
     <p>
-      Bienvenid@s a #ProgramadorFitness, serie de videos, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo.
-      Recuerda... mente sana en cuerpo sano :)
+      Bienvenid@s al running channel, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo.
+      Recuerda... mente sana en cuerpo sano.
     </p>
     <nav>
-      <a href="https://www.youtube.com/playlist?list=PLvq-jIkSeTUbJFWQx8gcy1MK0lTLrdLR9" target="_blank" title="YouTube">
+      <a href="#" target="_blank" title="YouTube">
         <i class="fab fa-youtube"></i>
       </a>
-      <a href="https://facebook.com/programadorfitness" target="_blank" title="Facebook">
+      <a href="#" target="_blank" title="Facebook">
         <i class="fab fa-facebook"></i>
       </a>
-      <a href="https://www.instagram.com/explore/tags/ProgramadorFitness/" target="_blank" title="Instagram">
+      <a href="#" target="_blank" title="Instagram">
         <i class="fab fa-instagram"></i>
       </a>
     </nav>
   </header>
   <main class="Main">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/9oQIylJ-JpU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=w4hmiOZi09g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </main>
   <script src="./script.js"></script>
 </body>
