--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>#ProgramadorFitness</title>
-  <meta name="description" content="Bienvenid@s a #ProgramadorFitness, serie de videos, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo. Recuerda... mente sana en cuerpo sano :)">
+  <title>#Running</title>
+  <meta name="description" content="Bienvenid@s a #running, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo. Recuerda... mente sana en cuerpo sano :)">
 
   <meta name="theme-color" content="#F0DB4F">   <!--color barra de navegación del navegador-->
   <meta name="MobileOptimized" content="width">
@@ -25,11 +25,11 @@
 
 <body>
   <header class="Header">
-    <h1>Running</h1>
-    <img src="./img/ProgramadorFitness.png" alt="#ProgramadorFitness">
+    <h1>#ProgramadorFitness</h1>
+    <img src="./img/ProgramadorFitness.png" alt="running">
     <p>
-      Bienvenid@s al running channel, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo.
-      Recuerda... mente sana en cuerpo sano.
+      Bienvenid@s a #running, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo.
+      Recuerda... mente sana en cuerpo sano :)
     </p>
     <nav>
       <a href="#" target="_blank" title="YouTube">
@@ -44,7 +44,7 @@
     </nav>
   </header>
   <main class="Main">
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=w4hmiOZi09g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/w4hmiOZi09g?si=0I8Mqmrbx58b589u" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </main>
   <script src="./script.js"></script>
 </body>
