--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="shortcut icon" type="image/png" href="./img/ProgramadorFitness.png">
-  <link rel="apple-touch-icon" href="./img/ProgramadorFitness.png"> 
-  <link rel="apple-touch-startup-image" href="./ProgramadorFitness.png">
+  <link rel="shortcut icon" type="image/png" href="./img/icon_512.png">
+  <link rel="apple-touch-icon" href="./img/icon_512.png"> 
+  <link rel="apple-touch-startup-image" href="./img/icon_384.png">
   <link rel="manifest" href="./manifest.json">
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
@@ -25,8 +25,8 @@
 
 <body>
   <header class="Header">
-    <h1>#ProgramadorFitness</h1>
-    <img src="./img/ProgramadorFitness.png" alt="running">
+    <h1>RUNNING</h1>
+    <img src="./img/icon_512.png" alt="running">
     <p>
       Bienvenid@s a #running, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo.
       Recuerda... mente sana en cuerpo sano :)
