--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <header class="Header">
-    <h1>RUNNING</h1>
+    <h1>Running</h1>
     <img src="./img/icon_512.png" alt="running">
     <p>
       Bienvenid@s a #running, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo.
