Move files to folder new

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <main class="Main">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/w4hmiOZi09g?si=0I8Mqmrbx58b589u" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </main>
-  <script src="./script.js"></script>
+  <script src="./js/sw.js"></script>
 </body>
 
 </html>
