Go back to former commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="./img/icon_512.png">
   <link rel="apple-touch-icon" href="./img/icon_512.png"> 
   <link rel="apple-touch-startup-image" href="./img/icon_384.png">
-  <link rel="manifest" href="./manifest/manifest.json">
+  <link rel="manifest" href="./manifest.json">
 
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
